--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,5 +22,14 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Build and sign release
+      run: |
+          chmod +x ./gradlew
+          ./gradlew assembleRelease -Pandroid.injected.signing.store.file=upload-keystore \
+            -Pandroid.injected.signing.store.password=$KEYSTORE_PASSWORD \
+            -Pandroid.injected.signing.key.alias=$KEYSTORE_ALIAS_NAME \
+            -Pandroid.injected.signing.key.password=$KEYSTORE_ALIAS_PASS
+      env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEYSTORE_ALIAS_NAME: ${{ secrets.KEYSTORE_ALIAS_NAME }}
+          KEYSTORE_ALIAS_PASS: ${{ secrets.KEYSTORE_ALIAS_PASS }}
