--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,21 @@ android {
     buildFeatures {
         viewBinding true
     }
+    
+    signingConfigs {
+        release {
+            storeFile rootProject.file('upload-keystore')
+            storePassword System.getenv("KEYSTORE_PASSWORD")
+            keyAlias System.getenv("KEYSTORE_ALIAS_NAME")
+            keyPassword System.getenv("KEYSTORE_ALIAS_PASS")
+        }
+    }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
