--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
     
     signingConfigs {
         release {
-            storeFile rootProject.file('upload-keystore')
+            storeFile file('upload-keystore')
             storePassword System.getenv("KEYSTORE_PASSWORD")
             keyAlias System.getenv("KEYSTORE_ALIAS_NAME")
             keyPassword System.getenv("KEYSTORE_ALIAS_PASS")
