--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,7 +20,22 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-        
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build and sign release
+      env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEYSTORE_ALIAS_NAME: ${{ secrets.KEYSTORE_ALIAS_NAME }}
+          KEYSTORE_ALIAS_PASS: ${{ secrets.KEYSTORE_ALIAS_PASS }}
+
+      run: |
+          chmod +x ./gradlew
+          ./gradlew assembleRelease -Pandroid.injected.signing.store.file=upload-keystore.jks \
+            -Pandroid.injected.signing.store.password=$KEYSTORE_PASSWORD \
+            -Pandroid.injected.signing.key.alias=$KEYSTORE_ALIAS_NAME \
+            -Pandroid.injected.signing.key.password=$KEYSTORE_ALIAS_PASS
+            
     - name: Echo KEYSTORE_PASSWORD
       run: |
           echo "KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}"
