--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,13 +28,9 @@ jobs:
           KEYSTORE_PASSWORD: ${{ env.KEYSTORE_PASSWORD }}
           KEYSTORE_ALIAS_NAME: ${{ env.KEYSTORE_ALIAS_NAME }}
           KEYSTORE_ALIAS_PASS: ${{ env.KEYSTORE_ALIAS_PASS }}
+          echo "KEYSTORE_PASSWORD: ${{ env.KEYSTORE_PASSWORD }}"
 
-      run: |
-          chmod +x ./gradlew
-          ./gradlew assembleRelease -Pandroid.injected.signing.store.file=upload-keystore.jks \
-            -Pandroid.injected.signing.store.password=$KEYSTORE_PASSWORD \
-            -Pandroid.injected.signing.key.alias=$KEYSTORE_ALIAS_NAME \
-            -Pandroid.injected.signing.key.password=$KEYSTORE_ALIAS_PASS
+
             
     - name: Echo KEYSTORE_PASSWORD
       run: |
