--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,29 +1,35 @@
-#test
 name: Android CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build and sign release
-    - name: Echo KEYSTORE_PASSWORD
-      run: |
-          echo "KEYSTORE_PASSWORD: ${{ env.KEYSTORE_PASSWORD }}"
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+
+      - name: Build and sign release
+        env:
+          KEYSTORE_PASSWORD: ${{ env.KEYSTORE_PASSWORD }}
+          KEYSTORE_ALIAS_NAME: ${{ env.KEYSTORE_ALIAS_NAME }}
+          KEYSTORE_ALIAS_PASS: ${{ env.KEYSTORE_ALIAS_PASS }}
+        run: |
+          chmod +x ./gradlew
+          ./gradlew assembleRelease -Pandroid.injected.signing.store.file=upload-keystore.jks \
+            -Pandroid.injected.signing.store.password="${KEYSTORE_PASSWORD}" \
+            -Pandroid.injected.signing.key.alias="${KEYSTORE_ALIAS_NAME}" \
+            -Pandroid.injected.signing.key.password="${KEYSTORE_ALIAS_PASS}"
+
+      - name: Echo KEYSTORE_PASSWORD
+        run: |
+          echo "KEYSTORE_PASSWORD: $KEYSTORE_PASSWORD"
