--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,9 +14,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
+         java-version: '11'
+         distribution: 'temurin'
+         cache: gradle
 
       - name: Build and sign release
         env:
