--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,10 +18,9 @@ jobs:
         with:
          java-version: '11'
          distribution: 'temurin'
-         cache: gradle
-      - name: Setup Environment
-        env:
-          KEYSTORE_PASSWORD: ${{ env.KEYSTORE_PASSWORD }}   
+         cache: gradle 
       - name: Echo KEYSTORE_PASSWORD
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
         run: |
           echo "KEYSTORE_PASSWORD: $KEYSTORE_PASSWORD"
