--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,6 +21,6 @@ jobs:
          cache: gradle 
       - name: Echo KEYSTORE_PASSWORD
         env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEYSTORE_PASSWORD: ${{ env.KEYSTORE_PASSWORD }}
         run: |
           echo "KEYSTORE_PASSWORD: $KEYSTORE_PASSWORD"
